fixed fonts contact form on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,7 +119,6 @@ article {
 article > img{
     border-radius: 10px;
     width: 49%;
-    margin: 25px
 }
 article h1 {
     font-size:36px;
@@ -130,10 +129,12 @@ article p {
 article:nth-child(odd) > img { /*aligning all articles images that are odd to be floating to right*/
 
     float: right;
+    margin-left: 20px;
 }
 article:nth-child(even) > img { /*aligning all articles images that are even to be floating to left*/
 
     float: left;
+    margin-right: 20px;
 }
 
 
@@ -179,8 +180,7 @@ article:nth-child(even) > img { /*aligning all articles images that are even to 
 
 /* CSS settings for screen width */
 /* for small to medium screen sizes up to 850px wide and down*/
-@media screen and (max-width: 600px)
-{
+@media screen and (max-width: 600px) {
     article {
         overflow: hidden;
         padding: 20px 0 20px 0;
@@ -224,28 +224,6 @@ article:nth-child(even) > img { /*aligning all articles images that are even to 
         visibility: visible;
         height: auto;
     }
-    fieldset input {
-        border: none;
-        background: transparent;
-        width: 300px;
-        border-bottom: 3px solid black;
-        font-size: 1rem;
-        margin-left: 30px;
-        border-radius: 10px;
-        color: rgb(136, 8, 8);
-        display:flex;
-        margin-left: 30px;
-        margin-top: 10px;
-        padding-left: 10px;
-    }
-    fieldset input:hover {
-            border-radius: 10px;
-            background-color: rgba(136, 8, 8, .1);
-    }
-    fieldset label {
-        font-size: 1rem;
-        margin-left: 30px;
-    }
     .footer a {
         text-decoration: none;
         color: whitesmoke;
@@ -255,7 +233,6 @@ article:nth-child(even) > img { /*aligning all articles images that are even to 
 
 
 /*CSS for contact page*/
-.about {text-align: center;}
 .button_send {
     background-color: rgb(136, 8, 8);
     border: solid 1px black;
@@ -306,7 +283,7 @@ fieldset h2 {
 fieldset input {
     border: none;
     background: transparent;
-    width: 250px;
+    width: 70%;
     border-bottom: 3px solid black;
     font-size: 1.5rem;
     margin-left: 30px;
